crates/aerro/tests/ui/fail/missing_debug.stderr
error[E0277]: `Foo` doesn't implement `Debug`
 --> tests/ui/fail/missing_debug.rs:2:10
  |
2 | pub enum Foo {
  |          ^^^ the trait `Debug` is not implemented for `Foo`
  |
  = note: add `#[derive(Debug)]` to `Foo` or manually `impl Debug for Foo`
note: required by a bound in `std::error::Error`
 --> $RUST/core/src/error.rs
  |
  | pub trait Error: Debug + Display {
  |                  ^^^^^ required by this bound in `Error`
help: consider annotating `Foo` with `#[derive(Debug)]`
  |
2 + #[derive(Debug)]
3 | pub enum Foo {
  |

error[E0277]: `Foo` doesn't implement `Debug`
 --> tests/ui/fail/missing_debug.rs:2:10
  |
2 | pub enum Foo {
  |          ^^^ the trait `Debug` is not implemented for `Foo`
  |
  = note: add `#[derive(Debug)]` to `Foo` or manually `impl Debug for Foo`
  = help: the trait `std::error::Error` is not implemented for `Foo`
          but trait `Error` is implemented for it
  = note: required for `Foo` to implement `std::error::Error`
note: required by a bound in `Aerro`
 --> src/traits/aerro.rs
  |
  | pub trait Aerro: std::error::Error + Send + Sync + 'static {
  |                  ^^^^^^^^^^^^^^^^^ required by this bound in `Aerro`
help: consider annotating `Foo` with `#[derive(Debug)]`
  |
2 + #[derive(Debug)]
3 | pub enum Foo {
  |
